--- a/views/index.erb
+++ b/views/index.erb
@@ -4,5 +4,24 @@
     Version <%= @@version%>
     <form method="POST" action="/">
     </form>
+<table>
+	<tr>
+		<td >  <button type="button" id="1" > <br> </button>  </td>
+		<td>  <button type="button" id="2"><br> </button>  </td>
+		<td>  <button type="button" id="3" ><br> </button>  </td>
+	</tr>
+	<tr>
+		<td>  <button type="button" id="4" ><br> </button>  </td>
+		<td>  <button type="button" id="5"><br> </button>  </td>
+		<td>  <button type="button" id="6" ><br> </button>  </td>
+	</tr>
+	<tr>
+		<td>  <button type="button" id="7" ><br> </button>  </td>
+		<td>  <button type="button" id="8"><br> </button>  </td>
+		<td>  <button type="button" id="9" ><br> </button>  </td>
+	</tr>
+</table>
+	
+ 
   </body>
 </html>
