Added button logic

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,27 +1,28 @@
 <html>
   <body>
     <h1> Tic Tac Toe </h1>
-    Version <%= @@version%>
+      Version <%= @@version%>
     <form method="POST" action="/">
-    </form>
-<table>
-	<tr>
-		<td >  <button type="button" id="1" > <br> </button>  </td>
-		<td>  <button type="button" id="2"><br> </button>  </td>
-		<td>  <button type="button" id="3" ><br> </button>  </td>
-	</tr>
-	<tr>
-		<td>  <button type="button" id="4" ><br> </button>  </td>
-		<td>  <button type="button" id="5"><br> </button>  </td>
-		<td>  <button type="button" id="6" ><br> </button>  </td>
-	</tr>
-	<tr>
-		<td>  <button type="button" id="7" ><br> </button>  </td>
-		<td>  <button type="button" id="8"><br> </button>  </td>
-		<td>  <button type="button" id="9" ><br> </button>  </td>
-	</tr>
-</table>
-	
- 
+    
+    <table>
+      <tr>
+	<td >  <input type="submit" id="1" value="1">   </input>  </td>
+	<td>  <input type="submit" id="2" value="2"><br> </input>  </td>
+	<td>  <input type="submit" id="3" value="3"><br> </input>  </td>
+      </tr>
+
+      <tr>
+	<td>  <input type="submit" id="4" value="4"><br> </input>  </td>
+	<td>  <input type="submit" id="5" value="5"><br> </input>  </td>
+	<td>  <input type="submit" id="6" value="6"><br> </input>  </td>
+      </tr>
+
+      <tr>
+	<td>  <input type="submit" id="7" value="7"><br> </input>  </td>
+	<td>  <input type="submit" id="8" value="8"><br> </input>  </td>
+	<td>  <input type="submit" id="9" value="9"><br> </input>  </td>
+      </tr>
+    </table>
+  </form>
   </body>
 </html>
